# kiwi-berry

./: .pre-commit-config.yaml  README.md  config.py  pyproject.toml
.github/workflows/: python-package.yml
examples/: usage.py
kiwi_berry/: __init__.py  fucking_types.py  search.py
tests/: conftest.py  test_request.py  test_response.py
tests/data/: search_response.json
