[tool.poetry]
name = "kiwi-berry"
version = "0.1.0"
description = "A kiwi.cum API wrapper"
authors = ["Martin Mokry <martin-kokos@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "kiwi_berry"}]
keywords = ["kiwi.com", "flights", "search", "API"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.1"
black = "^23.12.1"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[tool.poetry.group.orjson.dependencies]
orjson = "^3.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist", "alembic", ".venv"]
max-complexity = 10

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 130

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true
